@@ -5,6 +5,7 @@
 	<onload>SetProperty(RefreshList,1,Home)</onload>
 	<onload condition="!String.IsEmpty(SubBladeType))">Skin.Reset(SubBladeType)</onload>
 	<onload condition="Window.Previous(startup) + !Skin.HasSetting(DialogFirstRun)">AlarmClock(DialogFirstTime,ActivateWindow(1105),00:03,silent)</onload>
+	<onload condition="!String.IsEmpty(Skin.String(StartupAnimation))">AlarmClock(StartupAnimation,Skin.Reset(StartupAnimation),00:08,true)</onload>
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(1)">WindowClose</animation>
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(2)">WindowClose</animation>
 	<controls>
@@ -29,6 +30,7 @@
 		<control type="group">
 			<animation effect="slide" end="-50,0" time="0" condition="Control.HasFocus(1)">Conditional</animation>
 			<animation effect="slide" end="50,0" time="0" condition="Control.HasFocus(2)">Conditional</animation>
+			<animation effect="fade" start="0" end="100" time="200" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
 			<top>-95</top>
 			<control type="image">
 				<description>Background</description>
@@ -56,7 +58,9 @@
 		<control type="group">
 			<left>230</left>
 			<visible>!Control.HasFocus(1) + !Control.HasFocus(2)</visible>
-			<animation effect="fade" time="HomeVisibleFadeAnimationSpeed">WindowOpen</animation>
+			<animation effect="fade" time="HomeVisibleFadeAnimationSpeed" condition="!Window.Previous(startup) + String.IsEmpty(Skin.String(StartupAnimation))">WindowOpen</animation>
+			<animation effect="fade" start="0" end="100" time="500" condition="Window.Previous(startup)">WindowOpen</animation>
+			<animation effect="fade" start="0" end="100" time="500" delay="500" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
 			<include>HomeLogoButton</include>
 			<control type="label">
 				<description>Header label</description>
@@ -772,55 +776,67 @@
 		<control type="group">
 			<visible>!Control.HasFocus(1) + !Control.HasFocus(2)</visible>
 			<!-- Left side -->
-			<include content="BladesImagesLeft">
-				<param name="texture" value="blades-size2-left-NF.png" />
-			</include>
-			<control type="label">
-				<description>weather Label</description>
-				<label>31004</label>
-				<left>90</left>
-				<top>200</top>
-				<include>BladesLabelLeft</include>
+			<control type="group">
+				<animation effect="slide" start="-100,0" end="0,0" time="100" delay="200" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
+				<include content="BladesImagesLeft">
+					<param name="texture" value="blades-size2-left-NF.png" />
+				</include>
+				<control type="label">
+					<description>weather Label</description>
+					<label>31004</label>
+					<left>90</left>
+					<top>200</top>
+					<include>BladesLabelLeft</include>
+				</control>
 			</control>
-			<control type="image">
-				<left>50</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size3-left-NF.png</texture>
+			<control type="group">
+				<animation effect="slide" start="-100,0" end="0,0" time="100" delay="100" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
+				<control type="image">
+					<left>50</left>
+					<top>-40</top>
+					<width>115</width>
+					<height>800</height>
+					<texture>blades-size3-left-NF.png</texture>
+				</control>
+				<control type="label">
+					<description>Applications Label</description>
+					<label>31002</label>
+					<left>140</left>
+					<top>190</top>
+					<include>BladesLabelLeft</include>
+				</control>
 			</control>
-			<control type="label">
-				<description>Applications Label</description>
-				<label>31002</label>
-				<left>140</left>
-				<top>190</top>
-				<include>BladesLabelLeft</include>
-			</control>
-			<control type="image">
-				<left>100</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size4-header.png</texture>
-			</control>
-			<control type="label">
-				<description>Media Label</description>
-				<label>31001</label>
-				<left>188</left>
-				<top>170</top>
-				<include>BladesLabelLeft</include>
+			<control type="group">
+				<animation effect="slide" start="-100,0" end="0,0" time="100" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
+				<control type="image">
+					<left>100</left>
+					<top>-40</top>
+					<width>115</width>
+					<height>800</height>
+					<texture>blades-size4-header.png</texture>
+				</control>
+				<control type="label">
+					<description>Media Label</description>
+					<label>31001</label>
+					<left>188</left>
+					<top>170</top>
+					<include>BladesLabelLeft</include>
+				</control>
 			</control>
 			<!-- Right side -->
-			<include content="BladesImagesRight">
-				<param name="texture" value="blades-size3-right-NF.png" />
-			</include>
-			<control type="label">
-				<description>System Label</description>
-				<label>31003</label>
-				<left>48r</left>
-				<top>190</top>
-				<width>200</width>
-				<include>BladesLabelRight</include>
+			<control type="group">
+				<animation effect="slide" start="100,0" end="0,0" time="100" condition="Window.Previous(FullScreenVideo) + String.IsEqual(Skin.String(StartupAnimation),true)">WindowOpen</animation>
+				<include content="BladesImagesRight">
+					<param name="texture" value="blades-size3-right-NF.png" />
+				</include>
+				<control type="label">
+					<description>System Label</description>
+					<label>31003</label>
+					<left>48r</left>
+					<top>190</top>
+					<width>200</width>
+					<include>BladesLabelRight</include>
+				</control>
 			</control>
 		</control>
 
