@@ -1,3 +1,6 @@
+[B]Version 1.3.3[/B]
+- Startup animation also works when using splash screen
+
 [B]Version 1.3.2[/B]
 - Add startup animation
 
